Mon Oct 19 14:24:45 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/Log_Msg_Test.cpp:
          Added a few debug messages to exercise %S modifier.

Mon Oct 19 14:00:20 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/Sock_Connect.cpp:
          LynxOS improvements.

Mon Oct 19 12:18:26 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_string.cpp:
          Include OS_NS_stdio.h if ACE_HAS_STRSIGNAL is not defined.

Mon Oct 19 12:15:04 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-init-fedora/rc.d/init.d/tao-cosconcurrency:
        * rpmbuild/ace-tao-init-fedora/rc.d/init.d/tao-cosevent:
        * rpmbuild/ace-tao-init-fedora/rc.d/init.d/tao-cosnaming:
        * rpmbuild/ace-tao-init-fedora/rc.d/init.d/tao-cosnotification:
        * rpmbuild/ace-tao-init-fedora/rc.d/init.d/tao-costrading:
        * rpmbuild/ace-tao-init-fedora/rc.d/init.d/tao-rtevent:
        * rpmbuild/ace-tao-init-suse/init.d/tao-cosconcurrency:
        * rpmbuild/ace-tao-init-suse/init.d/tao-cosevent:
        * rpmbuild/ace-tao-init-suse/init.d/tao-cosnaming:
        * rpmbuild/ace-tao-init-suse/init.d/tao-cosnotification:
        * rpmbuild/ace-tao-init-suse/init.d/tao-costrading:
        * rpmbuild/ace-tao-init-suse/init.d/tao-rtevent:
          Use -ORBDeamon instead of --deamon

Mon Oct 19 12:10:04 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3729_Regression_Test.cpp:
        * tests/INET_Addr_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Moved regression test for 3729 to its own file

Mon Oct 19 11:58:04 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/INET_Addr_Test.cpp:
          Unicode fixes

Mon Oct 19 10:04:04 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_string.cpp:
          Fixed off by one bug.

        * ace/os_include/os_signal.h:
          Due to bug above reverted previous change.

Mon Oct 19 07:55:21 UTC 2009  Olli Savia  <ops@iki.fi>
